Slideshow: Allow use of button controls  (#731)
* Slideshow: Allow use of button controls

- Utilities:
  - Make common CFW_isDisabled()
  - Move controlEnable()/controlDisable() functions from player to common utils
  - controlDisable() handles disabled attribute only for valid elements
- Unit tests:
  - Finally added some for slideshow
  - Add ones for new common utils

* Util: CFW_controlEnable/Disable - set/unset tabindex attribute, plus unit tests

* Slideshow: Rework key handling and focus

* Update docs

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -396,17 +396,39 @@ $(window).ready(function() {
 
             <h2 id="slideshow">Slideshow:</h2>
 
+            <h3>Buttons</h3>
+            <div data-cfw="slideshow" data-cfw-slideshow-loop="true">
+                <div class="btn-group" role="region" aria-label="Slideshow navigation">
+                    <button type="button" class="btn" data-cfw-slideshow-nav="prev" aria-label="Previous">&laquo;</button>
+                    <button type="button" class="btn" data-cfw="tab" data-cfw-tab-target="#slideB0">Slide 1</button>
+                    <button type="button" class="btn" data-cfw="tab" data-cfw-tab-target="#slideB1">Slide 2</button>
+                    <button type="button" class="btn" data-cfw="tab" data-cfw-tab-target="#slideB2">Slide 3</button>
+                    <button type="button" class="btn" data-cfw-slideshow-nav="next" aria-label="Next">&raquo;</button>
+                </div>
+                <div class="tab-content">
+                    <div class="tab-pane" id="slideB0">
+                        <p>Slide one</p>
+                    </div>
+                    <div class="tab-pane" id="slideB1">
+                        <p>Slide two</p>
+                    </div>
+                    <div class="tab-pane" id="slideB2">
+                        <p>slide three</p>
+                    </div>
+                </div>
+            </div>
+
             <h3>Loop enabled</h3>
             <div data-cfw="slideshow" data-cfw-slideshow-loop="true">
-                <nav aria-label="Page navigation">
-                    <ul id="slidetest" class="pagination pagination-group">
+                <section aria-label="Slideshow navigation">
+                    <ul id="slidetestL" class="pagination pagination-group">
                         <li class="page-item"><a href="#" class="page-link" data-cfw-slideshow-nav="prev" aria-label="Previous">&laquo;</a></li>
                         <li class="page-item"><a href="#slideL0" class="page-link" data-cfw="tab">Slide 1</a></li>
                         <li class="page-item"><a href="#slideL1" class="page-link" data-cfw="tab">Slide 2</a></li>
                         <li class="page-item"><a href="#slideL2" class="page-link" data-cfw="tab">Slide 3</a></li>
                         <li class="page-item"><a href="#" class="page-link" data-cfw-slideshow-nav="next" aria-label="Next">&raquo;</a></li>
                     </ul>
-                </nav>
+                </section>
                 <div class="tab-content">
                     <div class="tab-pane" id="slideL0">
                         <p>Slide one</p>
@@ -423,16 +445,16 @@ $(window).ready(function() {
             <h3>Regular</h3>
             <p>Demo using pagination componenent, should also work for tab/pill navigation.</p>
             <div data-cfw="slideshow">
-                <nav aria-label="Page navigation">
+                <section aria-label="Slideshow navigation">
                     <ul id="slidetest" class="pagination pagination-group">
                         <li class="page-item"><a href="#" class="page-link" data-cfw-slideshow-nav="prev" aria-label="Previous">&laquo;</a></li>
                         <li class="page-item"><a href="#slide0" class="page-link" data-cfw="tab">Slide 1</a></li>
                         <li class="page-item"><a href="#slide1" class="page-link" data-cfw="tab">Slide 2</a></li>
-                        <li class="page-item"><a href="#slide2" class="page-link" data-cfw="tab">Slide 3</a></li>
+                        <li class="page-item"><a href="#slide2" class="page-link disabled" data-cfw="tab">Slide 3</a></li>
                         <li class="page-item"><a href="#slide3" class="page-link" data-cfw="tab">Slide 4</a></li>
                         <li class="page-item"><a href="#" class="page-link" data-cfw-slideshow-nav="next" aria-label="Next">&raquo;</a></li>
                     </ul>
-                </nav>
+                </section>
                 <a href="#" data-cfw-slideshow-nav="prev" title="Previous">&laquo;</a>
                 <a href="#" data-cfw-slideshow-nav="next" title="Next">&raquo;</a>
                 <!--
