--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -533,6 +533,41 @@
     </div>
 </div>
 
+<!-- Modal chained example -->
+<button type="button" class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#modalChained1">Modal chained example</button>
+<div class="modal" id="modalChained1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title">First chained modal</div>
+        <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#modalChained2" data-cfw-modal-chain="#modalChained2">Open second chained modal</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal" id="modalChained2">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title">Second chained modal</div>
+        <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button role="button" class="btn btn-primary" onclick="$('#modalChained2').CFW_Modal('chain', '#modalChained1');">Open First chained modal</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <p>Vivamus sollicitudin porttitor nisl, sed tempor leo. Maecenas ut rhoncus nisi. Morbi ut bibendum est. Donec tincidunt nec tellus a egestas. Donec id tortor elementum, aliquet magna euismod, commodo felis. Sed a nulla viverra, malesuada nisi a, fringilla velit. Donec justo felis, cursus eu justo ac, vehicula consequat mauris. Duis a interdum lectus, eu dictum nibh. Cras ligula velit, vehicula et luctus a, cursus quis sapien. Aenean a molestie libero. Nam congue ultrices turpis, sed tempus arcu malesuada sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam eu ligula eleifend, rutrum purus id, pharetra enim. Pellentesque a posuere ex, ac egestas quam. Etiam lobortis massa at elementum consectetur. Nullam tempor orci quis ligula eleifend auctor.</p>
 <p>Integer eget fringilla ex. Quisque ex ante, eleifend non massa a, tempus condimentum lorem. Donec a est sed enim ullamcorper posuere eu sed libero. Etiam sit amet tellus mi. Mauris dui risus, finibus sed turpis vitae, pulvinar pretium felis. Duis id metus at eros laoreet tempus. Nunc mattis efficitur dolor, nec maximus tellus commodo nec. Etiam ac molestie dolor, at hendrerit ante. Donec vehicula ipsum et mauris finibus, eu pellentesque felis rhoncus. Pellentesque viverra arcu sapien, ut lobortis ante ultrices vel. Vivamus quis justo nec ipsum vestibulum tempor. Nullam lacinia dui sed libero tempor tempus.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse finibus convallis eros, eget porttitor neque tempor auctor. Aliquam elementum pretium tortor ut euismod. Aliquam vel dignissim augue. Cras auctor nec quam et iaculis. Praesent non augue vitae nulla varius cursus et eu diam. Nulla at blandit ante, at pellentesque ligula. Nunc sagittis arcu nec ornare sagittis. In a massa porta, hendrerit nulla a, tristique velit.</p>
