Dropdown: Allow for use of `<select>` in menu, and allow click events to bubble

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1392,6 +1392,7 @@ $(window).ready(function() {
                     <li><a href="#">Action</a></li>
                     <li><div class="dropdown-item"><input type="text" placeholder="text input"></div></li>
                     <li><div class="dropdown-item"><textarea placeholder="textarea"></textarea></div></li>
+                    <li><div class="dropdown-item"><select><option>one</option><option>two</option></select></div></li>
                     <li><a href="#">Action</a></li>
                     <li><button class="dropdown-item" type="button">Button</button></li>
                 </ul>
