Lists: Resolve multiple issues with borders

--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -525,6 +525,12 @@
 </div>
 
 <h2>Color Variants</h2>
+<ul class="list list-spaced list-group bg-dark text-light border-info">
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+</ul>
+
 <ul class="list list-spaced list-divided bg-dark text-light border-secondary">
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
