Forms: Use value with readonly input

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1124,7 +1124,7 @@ Showing a <kbd>kdb sample</kbd>
 </form>
 
 <h3>Read only input</h3>
-<input class="form-control" type="text" placeholder="Readonly input here&hellip;" readonly>
+<input class="form-control" type="text" value="Readonly input here&hellip;" readonly>
 
 <h3>Input sizing</h3>
 <input class="form-control form-control-large" type="text" placeholder=".form-control-large">
