--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -105,7 +105,7 @@
 <form>
     <div class="form-group">
         <label for="inputReadonly">Example Readonly input</label>
-        <input class="form-control" type="text" placeholder="Readonly input" id="inputReadonly" readonly>
+        <input class="form-control" type="text" value="Readonly input" id="inputReadonly" readonly>
     </div>
 </form>
 
