Index: Update name use

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <span class="home-icon-box bg-info text-light"><span class="fas fa-paper-plane" aria-hidden="true"></span></span>
         Get Started Now
       </h2>
-      <p>Quickly get up and running with Figuration by including the compiled CSS and JavaScript in your document. Add the following CDN links in the <code>&lt;head&gt;</code> of your HTML document.</p>
+      <p>Quickly get up and running with CAST Figuration by including the compiled CSS and JavaScript in your document. Add the following CDN links in the <code>&lt;head&gt;</code> of your HTML document.</p>
       <p>More information is available on the <a href="/4.2/get-started/quick-start/">Quick Start page</a>.</p>
     </div>
     <div class="col-md-6 home-feature">
@@ -259,7 +259,7 @@
         <span class="home-icon-box bg-success-600 text-light"><span class="fas fa-th-large" aria-hidden="true"></span></span>
         Flexbox Enabled
       </h2>
-      <p>Many of Figuration's components, but not all, are built using flexbox.  This means enhanced layout and alignment control, but it does come at the cost of not being able to support older browsers.</p>
+      <p>Many of CAST Figuration's components, but not all, are built using flexbox.  This means enhanced layout and alignment control, but it does come at the cost of not being able to support older browsers.</p>
     </div>
     <div class="col-md-6 border-t border-md-t-0 border-md-s pt-2 pt-md-0">
       <h2>
@@ -269,7 +269,7 @@
       <div class="media">
         <a href="http://sass-lang.com/"><img src="/assets/img/sass.svg" class="d-flex me-1" width="64" alt="Sass logo"></a>
         <div class="media-body">
-          <p class="mb-0">Figuration compiles and uses standard CSS for its output, but on the source side we use the power of <a href="http://sass-lang.com/">Sass</a> and <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> for faster and consistent development.</p>
+          <p class="mb-0">CAST Figuration compiles and uses standard CSS for its output, but on the source side we use the power of <a href="http://sass-lang.com/">Sass</a> and <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> for faster and consistent development.</p>
         </div>
       </div>
     </div>
