--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -334,7 +334,7 @@ $(window).ready(function() {
             </div>
 
             <div class="alert alert-success" id="alert1">
-                <button type="button" class="close" data-cfw-dismiss="alert" data-cfw-alert-animate=false aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-cfw-dismiss="alert" data-cfw-alert-animate="false" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <strong>Boom!</strong> Remove this alert without the animation.
             </div>
             <!--
