--- a/test/js/index.html
+++ b/test/js/index.html
@@ -106,9 +106,9 @@
     }
 </script>
 
-<!-- Disable CFW API -->
 <script>
-    var CFW_API = false;
+    // Disable CFW API
+    // var CFW_API = false;
 </script>
 
 <!-- Widget sources (in order of concat)-->
