--- a/test/visual/grid.html
+++ b/test/visual/grid.html
@@ -463,6 +463,23 @@
   </div>
 </div>
 
+<div class="container mt-1">
+    <h2>Auto-sized columns should overrided earlier breakpoint specific-sized column</h2>
+
+	<div class="row m1">
+		<div class="col-md-6 col-xl">col-md-6 col-xl</div>
+		<div class="col-md-6 col-xl">col-md-6 col-xl</div>
+		<div class="col-md-6 col-xl">col-md-6 col-xl</div>
+		<div class="col-md-6 col-xl">col-md-6 col-xl</div>
+	</div>
+
+	<div class="row m1">
+		<div class="col-sm-6 col-lg">col-sm-6 col-lg</div>
+		<div class="col-sm-6 col-lg">col-sm-6 col-lg</div>
+		<div class="col-sm-6 col-lg">col-sm-6 col-lg</div>
+		<div class="col-sm-6 col-lg">col-sm-6 col-lg</div>
+	</div>
+</div>
 </main>
 
 </body>
