Add TM, fix version menu

--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@ layout: home
       </div>
       <div class="w-100 d-md-none"></div>
       <div class="col-sm-9 col-md-7 col-lg-6 mx-auto mx-md-0 text-center text-md-start">
-        <h1>CAST Figuration</h1>
+        <h1>{{ site.regtitle }}</h1>
         <p class="lead">
           A feature rich, responsive, mobile first, accessible, front-end framework.
         </p>
