Update disabled links
Bring inline with recommendations from: https://www.w3.org/TR/html-aria/#docconformance

--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -234,7 +234,7 @@ var setRTL = function() {
                 </ul>
             </li>
             <li class="dropdown-divider"></li>
-            <li><a href="#" class="disabled" tabindex="-1" aria-disabled="true">Separated link</a></li>
+            <li><a href="#">Separated link</a></li>
         </ul>
     </div>
 
@@ -284,7 +284,7 @@ var setRTL = function() {
                 </ul>
             </li>
             <li class="dropdown-divider"></li>
-            <li><a href="#" class="disabled" tabindex="-1" aria-disabled="true">Separated link</a></li>
+            <li><a href="#">Separated link</a></li>
         </ul>
     </div>
 </div>
@@ -413,7 +413,7 @@ var setRTL = function() {
             </ul>
         </li>
         <li class="dropdown-divider"></li>
-        <li><a href="#" class="disabled" tabindex="-1" aria-disabled="true">Disabled link</a></li>
+        <li><a class="disabled">Disabled link</a></li>
     </ul>
 </div>
 <div class="dropdown float-end">
@@ -441,7 +441,7 @@ var setRTL = function() {
             </ul>
         </li>
         <li class="dropdown-divider"></li>
-        <li><a href="#" class="disabled" tabindex="-1" aria-disabled="true">Disabled link</a></li>
+        <li><a class="disabled">Disabled link</a></li>
     </ul>
 </div>
 
