--- a/test/visual/pagination.html
+++ b/test/visual/pagination.html
@@ -35,7 +35,7 @@
     <nav aria-label="...">
         <ul class="pagination">
             <li class="page-item">
-                <a href="#" class="page-link disabled" tabindex="-1" aria-disabled="true">Previous</a>
+                <a class="page-link disabled">Previous</a>
             </li>
             <li class="page-item">
                 <a href="#" class="page-link active" aria-current="page">1</a>
