--- a/site/4.2/examples/navbar-fixed-top/index.html
+++ b/site/4.2/examples/navbar-fixed-top/index.html
@@ -65,11 +65,11 @@ body {
     <div class="jumbotron">
         <h1>Fixed Top Navbar Example</h1>
         <p class="lead">
-            This example page shows off how a top-aligned navbar and its responsive behaviours.
+            This example page shows off how a top-aligned navbar and its responsive behaviors.
             This navbar will remain fixed at the top of your browser's viewport as you scroll.
         </p>
         <p>
-            In order to experience the responsive behaviour of the navbar, you will have to resize your browser above and below the <code>lg</code> breakpoint.
+            In order to experience the responsive behavior of the navbar, you will have to resize your browser above and below the <code>lg</code> breakpoint.
         </p>
         <p>
             <a href="{{ site.path }}/{{ version.docs }}/components/navbar/" class="btn btn-lg btn-primary">View navbar docs &raquo;</a>
