--- a/site/4.2/examples/navbar-static-top/index.html
+++ b/site/4.2/examples/navbar-static-top/index.html
@@ -61,11 +61,11 @@ body {
     <div class="jumbotron my-1">
         <h1>Static Top Navbar Example</h1>
         <p class="lead">
-            This example page shows off how a top-aligned navbar and its responsive behaviours.
+            This example page shows off how a top-aligned navbar and its responsive behaviors.
             This navbar will remain in its original position and moves with the rest of the page as you scroll.
         </p>
         <p>
-            In order to experience the responsive behaviour of the navbar, you will have to resize your browser above and below the <code>lg</code> breakpoint.
+            In order to experience the responsive behavior of the navbar, you will have to resize your browser above and below the <code>lg</code> breakpoint.
         </p>
         <p>
             <a href="{{ site.path }}/{{ version.docs }}/components/navbar/" class="btn btn-lg btn-primary">View navbar docs &raquo;</a>
