--- a/site/4.2/examples/navbars/index.html
+++ b/site/4.2/examples/navbars/index.html
@@ -28,7 +28,7 @@
     <div class="jumbotron my-1">
         <h1>Figuration Navbar Examples</h1>
         <p class="lead">
-            This example page shows off variations of the navbar and their responsive behaviours.
+            This example page shows off variations of the navbar and their responsive behaviors.
             Some navbars extend the width of the viewport, others are confined within a container.
         </p>
         <p>
