Update grunt-html devDependency, fix reported errors

--- a/test/visual/loader.html
+++ b/test/visual/loader.html
@@ -36,7 +36,7 @@
 <h2>Button</h2>
 <div class="mb-1">
     <button class="btn btn-primary" disabled>
-        <div class="loader-circle" role="status" aria-hidden="true"></div>
+        <span class="loader-circle" role="status" aria-hidden="true"></span>
         Loading...
     </button>
 </div>
@@ -108,7 +108,7 @@
     </div>
 </div>
 
-<h2>Double<h2>
+<h2>Double</h2>
 <div class="mb-1">
     <div class="loader-double fs-4xlarge" role="status">
       <span class="sr-only">Loading...</span>
