--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -289,10 +289,9 @@ var setRTL = function() {
     </div>
 </div>
 
-<div class="my-1">
-<div class="row">
+<div class="row my-1">
     <div class="col-2">
-        <input type="text" class="form-control" value="test"></input>
+        <input type="text" class="form-control" value="test">
     </div>
     <div class="col">
 
