--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -562,7 +562,7 @@
         ...
       </div>
       <div class="modal-footer">
-        <button role="button" class="btn btn-primary" onclick="$('#modalChained2').CFW_Modal('chain', '#modalChained1');">Open First chained modal</a>
+        <button type="button" class="btn btn-primary" onclick="$('#modalChained2').CFW_Modal('chain', '#modalChained1');">Open First chained modal</button>
       </div>
     </div>
   </div>
