--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -19,7 +19,7 @@
 </style>
 
 </head>
-<body>
+<body style="margin-bottom: 15rem;">
 
 <div class="container">
 
@@ -626,6 +626,21 @@
 
 </div>
 
+<div class="container">
+  <h2>Datalist</h2>
+
+  <label for="exampleDataList" class="form-label">Datalist example</label>
+  <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
+  <datalist id="datalistOptions">
+    <option value="apple"></option>
+    <option value="banana"></option>
+    <option value="kiwi"></option>
+    <option value="orange"></option>
+    <option value="pear"></option>
+    <option value="pineapple"></option>
+    <option value="strawberry"></option>
+  </datalist>
+</div>
 
 
 </body>
