Typography: Add kbd nested background color

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -374,13 +374,13 @@ Holder.addTheme("gray", {
 <p><code>code sample</code></p>
 <p><a href="#"><code>code inside a link</code></a></p>
 <p><code>code <a href="#">with a link</a> sample</code></p>
-<p><kbd>kdb sample</kbd></p>
+<p><kbd>kbd sample</kbd></p>
 <p><kbd>nested <kbd>kbd</kbd> sample</kbd></p>
 <p><var>var sample</var></p>
 <p><samp>samp sample</samp></p>
 <pre>
 This is a test of &lt;pre&gt; with a <code>code sample</code>
-Showing a <kbd>kdb sample</kbd>
+Showing a <kbd>kbd sample</kbd>
 <a href="#">Link test for reference</a>
 </pre>
 
